[package]
name = "raos"
version = "0.1.0"
authors = ["KatoMono Enkeli <k4t0mono@gmail.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.7.1"
volatile = "0.2.6"
spin = "0.5.0"

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]
